<resources>
    <string name="app_name">Flower app</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="create_an_account_undrl"><u>Create an account</u></string>
    <string name="first_time">First time?</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email">Please enter your email, to reset your password</string>
    <string name="or">or</string>
    <string name="i_forgot_my_password"><u>I forgot my password</u></string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="have_an_account">Have an account?</string>
    <string name="log_in_now"><u>Log in now!</u>></string>
    <string name="remember_password">Remember password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="register">Register</string>
    <string name="name">Name:</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="default_web_client_id">542476245293-c1to6vr86qt98umllqnc8b4el831de63.apps.googleusercontent.com</string>
    <string name="upcoming_event">06.12.2024 - Mothers Birthday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_verify_your_card">To verify your card, we will temporarily charge $1. This amount is only for validation purposes and will be refunded to your account shortly.</string>
</resources>