<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".RegisterSection">

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/first_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:fontFamily="@font/poppins_light"
            android:textSize="17sp"
            android:textColor="@color/dark_pink"/>
        <TextView
            android:id="@+id/create_an_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_now"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="17sp"
            android:textColor="@color/dark_pink"/>



    </LinearLayout>

    <Button
        android:id="@+id/Sign_Up"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/dark_button"
        android:drawableLeft="@drawable/google_icon"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/or_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/Sign_Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/dark_pink"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/or"
            android:textSize="17sp"
            android:textColor="@color/dark_pink"/>


        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/dark_pink"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_an_account"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/dark_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/or_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/agree_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/create_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/i_agree_to_the"
            android:fontFamily="@font/poppins_light"
            android:textSize="17sp"
            android:textColor="@color/dark_pink"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/termsAndCoditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_and_conditions"
            android:fontFamily="@font/poppins_light"
            android:textSize="17sp"
            android:textColor="@color/dark_pink"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/light_button"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/eye_crossed"
        android:textColor="@color/dark_pink"
        android:layout_marginBottom="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/agree_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="50dp"
        android:textColor="@color/dark_pink"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/light_button"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:textColor="@color/dark_pink"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="50dp"
        android:textColor="@color/dark_pink"
        app:layout_constraintBottom_toTopOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/light_button"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:textColor="@color/dark_pink"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="50dp"
        android:textColor="@color/dark_pink"
        app:layout_constraintBottom_toTopOf="@+id/name_field"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/poppins_bold"
        android:textSize="35sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/dark_pink"
        app:layout_constraintBottom_toTopOf="@+id/name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGO"
        android:layout_marginBottom="30dp"
        android:textSize="70sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/dark_pink"
        app:layout_constraintBottom_toTopOf="@+id/Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>