<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mint"
    tools:context=".LogInSection">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="80dp">

        <TextView
            android:id="@+id/first_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_time"
            android:fontFamily="@font/poppins_light"
            android:textSize="17sp"
            android:textColor="@color/dark_green"/>
        <TextView
            android:id="@+id/create_an_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account_undrl"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="17sp"
            android:textColor="@color/dark_green"/>



    </LinearLayout>

    <Button
        android:id="@+id/Log_in_google"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/dark_button"
        android:drawableLeft="@drawable/google_icon"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/log_in_with_google"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/or_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/Log_in_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/dark_green"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/or"
            android:textSize="17sp"
            android:textColor="@color/dark_green"/>

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/dark_green"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/LogIn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/dark_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/or_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/iForgotMy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_forgot_my_password"
        android:fontFamily="@font/poppins_light"
        android:textSize="11sp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/LogIn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/light_button"
        android:inputType="textPassword"
        android:textColor="@color/dark_green"
        android:drawableEnd="@drawable/eye_crossed"
        app:layout_constraintBottom_toTopOf="@+id/iForgotMy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="50dp"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:textColor="@color/dark_green"
        android:background="@drawable/light_button"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginStart="50dp"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/log_in_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:fontFamily="@font/poppins_bold"
        android:textSize="35sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGO"
        android:layout_marginBottom="30dp"
        android:textSize="70sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/log_in_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>